<resources>
    <string name="app_name">Garden Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="action_change_greenhouse_name">Изменить название</string>
    <string name="action_delete_greenhouse">Удалить теплицу</string>
    <string-array name="vegetables">
        <item>Помидор</item>
        <item>Огурец</item>
        <item>Свекла</item>
        <item>Болгарский Перец</item>
        <item>Красный Перец</item>
        <item>Лук Репчатый</item>
        <item>Чеснок</item>
        <item>Морковь</item>
        <item>Капуста</item>
        <item>Тыква</item>
        <item>Баклажан</item>
        <item>Картофель</item>
        <item>Помидоры Черри</item>
        <item>Брокколи</item>
        <item>Артишок</item>
        <item>Горох</item>
        <item>Кабачок</item>
        <item>Редис</item>
        <item>Патиссон</item>
    </string-array>
    <string name="firebase_access">Сохранить этот список овощей\n или загрузить его из Облака?</string>
    <string name="empty">(Пусто)</string>
    <string name="save_question">Сохранить?</string>
    <string name="error">В Облаке пусто!</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_example">8 844 333 22 11</string>
    <string name="add_phone_number">Укажите номер телефона, на \nкоторый будут приходить СМС-сообщения\n с информацией о теплице</string>
    <string name="check_email">На вашу почту было отправлено письмо для подтверждения регистрации!</string>
    <string name="error_firebase">К сожалению, в Облаке пока что\n ничего нет. Ваш список овощей\n не был изменён</string>
    <string name="connect_to_greenhouse">Подключитесь к теплице!</string>
    <string name="garden">Мой Огород</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="greenhouse">Моя Теплица</string>
    <string name="search_hint">Найти растение</string>
    <string name="humidity">Влажность:</string>
    <string name="temperature">Температура:</string>
    <string name="recommend_temperature">Рекомендуемая t: </string>
    <string name="depth_of_landing">Глубина Посадки: </string>
    <string name="plant_distance">S Между Растениями: </string>
    <string name="row_distance">S Между Грядками: </string>
    <string name="plant_days">Время Созревания: </string>
    <string name="developers">►Разработчик: Maxim Lyovkin\n\n►Связаться:\ngarden.assistant.app@gmail.com - пишите об ошибках и ваших предложениях</string>
    <string name="change_name">Измените название теплицы:</string>
    <string name="new_name">Новое название</string>
    <string name="action_exit">Выйти</string>
    <string name="action_add_greenhouse">Добавить Теплицу</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="artichoke">
        <item>Артишок</item>
        <item>
            Особенности:\n
            ♦Плод требует много места\n\n
            ♦Любит прямой солнечный свет\n\n
            ♦Нуждается в обильном поливе\n\n
            ♦Необходимо содержать в тепле\n\n
            ♦От жары снижается качество плодов\n\n
            ♦Можно выращивать в теплице/огороде
        </item>
        <item>
            Согласно принятому определению, артишок – это травянистое растение Carciofi из семейства Астровых родом из Азии, распространенный в культуре потребления Средиземноморья.
            В кулинарии употребляется молодой нераскрывшийся бутон сизо-фиолетового цветка, который напоминает чертополох из-за многослойной чешуи.
            Из 140 разновидностей растений в пищу можно использовать только 40 видов. Центром выращивания артишоков является Калифорния.
            На рынке встречаются круглые и вытянутые бутоны, разных оттенков, с шипами или без них. Иногда встречается бутон с корзинкой.
        </item>
        <item>20-25°С</item>
        <item>5 см</item>
        <item>75 см</item>
        <item>90 см</item>
        <item>65 дней</item>
    </string-array>
    <string-array name="aubergine">
        <item>Баклажан</item>
        <item>
            Особенности:\n
            ♦Нуждается в обильном поливе\n\n
            ♦Необходимо содержать в тепле\n\n
            ♦Любит солнечный свет\n\n
            ♦Рассада не переносит сквозняки\n\n
            ♦Лучше выращивать в теплице
        </item>
        <item>
            Баклажан (паслен темноплодный) – многолетнее травянистое растение, принадлежащее к семейству Пасленовых.
            Имеет плоды, применяемые в кулинарии. Окультуривать его начали 1500 лет назад в тропических областях Индии, Среднего Востока и Южной Азии.
            В Россию баклажан впервые завезли торговцы в 17 веке. Необычное растение понравилось людям и постепенно стало популярным овощем на огороде и продуктом питания в кулинарии.
            Сначала баклажан распространился в центральных и южных регионах, а позднее попал на север.
        </item>
        <item>23-27°С</item>
        <item>1 см</item>
        <item>70 см</item>
        <item>70 см</item>
        <item>120 дней</item>
    </string-array>
    <string-array name="bulgarian_pepper">
        <item>Болгарский Перец</item>
        <item>
            Особенности:\n
            ♦Нуждается в обильном поливе\n\n
            ♦Необходимо содержать в тепле\n\n
            ♦Не любит сильного ветра\n\n
            ♦Любит солнечный свет\n\n
            ♦Не любит пикировку\n\n
            ♦Лучше выращивать в теплице
        </item>
        <item>
            Болгарский перец – это один из сортов сладкого Овощного перца, принадлежащего к семейству Пасленовые.
            В природе в диком виде овощной перец встречается в тропических регионах Америки и является многолетним растением,
            окультуренный перец разводится практически на всех континентах и является однолетним. Плоды болгарского перца могут
            быть красного, оранжевого, коричневого или желтого цветов, различной величины и формы.
        </item>
        <item>18-25°С</item>
        <item>1 см</item>
        <item>70 см</item>
        <item>40 см</item>
        <item>90 дней</item>
    </string-array>
    <string-array name="broccoli">
        <item>Брокколи</item>
        <item>
            Особенности:\n
            ♦Плод любит подкормки\n\n
            ♦Нуждается в поливе\n\n
            ♦Не любит жару\n\n
            ♦Можно выращивать в теплице/огороде
        </item>
        <item>
            Брокколи — овощная однолетняя культура, подвид цветной капусты, включающий в себя спаржевые сорта с головками зеленого и фиолетового цвета.
            Она во многом схожа с цветной капустой, но головка её более рыхлая. Брокколи, полезные свойства и неприхотливость в
            выращивании которой первыми обнаружили итальянцы, отваривают, обжаривают, консервируют, замораживают, готовят с ней вкусные супы и салаты.
        </item>
        <item>15-20°С</item>
        <item>1 см</item>
        <item>50 см</item>
        <item>40 см</item>
        <item>70 дней</item>
    </string-array>
    <string-array name="tomato">
        <item>Помидор</item>
        <item>
            Особенности:\n
            ♦Плод любит солнечный свет\n\n
            ♦Любит суглинистую почву\n\n
            ♦Любит влагу\n\n
            ♦Любит удобрения\n\n
            ♦Любит тепло\n\n
            ♦Можно выращивать в теплице/огороде
        </item>
        <item>
           Томат, или помидор — однолетнее или многолетнее травянистое растение, вид рода
          Паслён семейства Паслёновые. Возделывается как овощная культура.Различие между
          научным и бытовым (кулинарным) представлением о плодах, ягодаx, фруктах, овощах
          в случае томата (как и некоторых других растений, например, огурцов) приводит к
          путанице. Плоды томата — с точки зрения ботаники — многогнёздные синкарпные ягоды.
          В английском языке не существует разницы между терминами фрукт и плод. В 1893 году
          Верховный суд США единогласно признал, что при взимании таможенных сборов помидоры,
          по способу их использования, следует считать овощами, поскольку они подавались на обед,
          а не на десерт (хотя суд отметил, что с ботанической точки зрения томаты — это ягоды).
        </item>
        <item>20-24°С</item>
        <item>1 см</item>
        <item>90 см</item>
        <item>95 см</item>
        <item>75 дней</item>
    </string-array>
    <string-array name="cucumber">
        <item>Огурец</item>
        <item>
            Особенности:\n
            ♦Плод любит солнечный свет\n\n
            ♦Любит суглинистую почву\n\n
            ♦Любит влагу\n\n
            ♦Не переносит обилие удобрений\n\n
            ♦Любит тепло\n\n
            ♦Можно выращивать в теплице/огороде
        </item>
        <item>
           Огурец обыкновенный, или Огурец посевной — однолетнее травянистое растение,
          вид рода Огурец семейства Тыквенные, овощная культура. Огурец появился в культуре
          более 6 тысяч лет назад. Родина этого вида — тропические и субтропические районы
          Индии, подножия Гималаев, где он до сих пор растёт в естественных условиях. Упомянут
          в Библии как овощ Египта.Эта культура была известна уже грекам, от которых перешла к
          римлянам, и в эпоху Карла Великого была распространена уже по Средней Европе.
        </item>
        <item>23-26°С</item>
        <item>2 см</item>
        <item>30 см</item>
        <item>120 см</item>
        <item>65 дней</item>
    </string-array>
    <string-array name="peas">
        <item>Горох</item>
        <item>
            Особенности:\n
            ♦Нуждается в поливе\n\n
            ♦Любит тепло\n\n
            ♦Плод любит безветренную погоду\n\n
            ♦Лучше выращивать в огороде
        </item>
        <item>
            Горох – самое популярное растение из бобовых. Это объясняется тем, что его несложно выращивать, он дает богатый урожай, хорошо насыщает, его нетрудно готовить.
            Также горох известен своими лечебными свойствами, что обусловлено его уникальным составом: в нем содержится много, в том числе и очень редких, витаминов и минералов.
        </item>
        <item>12-21°С</item>
        <item>5 см</item>
        <item>10 см</item>
        <item>50 см</item>
        <item>60 дней</item>
    </string-array>
    <string-array name="tomatoes_cherry">
        <item>Помидоры Черри</item>
        <item>
            Особенности:\n
            ♦Плод любит солнечный свет\n\n
            ♦Любит суглинистую почву\n\n
            ♦Любит влагу\n\n
            ♦Любит обилие удобрений\n\n
            ♦Любит тепло\n\n
            ♦Можно выращивать в теплице/огороде
        </item>
        <item>
           Томат черри — разновидность томатов с небольшими плодами (ещё одно название —
          Вишнёвый томат), культивируется с начала 1800-х годов. Считается, что они произошли
          из Перу или северной части Чили. Размеры томатов черри разнообразны, некоторые
          сравнимы с мячом для гольфа. Форма плода от сферической до слегка вытянутой. Обычно
          красные, хотя существуют сорта с жёлтыми, зелёными и чёрными плодами.
        </item>
        <item>21-27°С</item>
        <item>1 см</item>
        <item>50 см</item>
        <item>60 см</item>
        <item>80 дней</item>
    </string-array>
    <string name="hint_email">Почта</string>
    <string name="action_sign">Войти</string>
    <string name="hint_password">Пароль</string>
</resources>