<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign"
        android:orderInCategory="150"
        android:title="@string/action_sign"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_greenhouse_name"
        android:orderInCategory="300"
        android:title="@string/action_change_greenhouse_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_greenhouse"
        android:orderInCategory="400"
        android:title="@string/action_delete_greenhouse"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_greenhouse"
        android:orderInCategory="500"
        android:title="@string/action_add_greenhouse"
        app:showAsAction="never" />
</menu>