<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewHumanLogin"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/human" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/field_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:paddingTop="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/field_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingBottom="20dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </RelativeLayout>

</LinearLayout>