<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/greenhouse_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context="com.garden_assistant.gardenassistant.GreenhouseFragment">

    <FrameLayout
        android:id="@+id/content_plant_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewPlantImage"
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/artichokes_background" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="25dp"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="5dp"
                card_view:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTextPlantRecommendTemperature"
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15sp"
                            android:text="@string/recommend_temperature"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewPlantRecommendTemperature"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTextPlantDepth"
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15sp"
                            android:text="@string/depth_of_landing"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewPlantDepth"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTextPlantDistance"
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15sp"
                            android:text="@string/plant_distance"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewPlantDistance"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTextRowDistance"
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15sp"
                            android:text="@string/row_distance"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewRowDistance"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTextPlantDays"
                            android:layout_width="144dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15sp"
                            android:text="@string/plant_days"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewPlantDays"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/textViewSmallInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:lineSpacingExtra="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="40dp"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textViewPlantName"
                android:layout_width="315dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="156dp"
                android:textColor="@color/cardview_light_background"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="118dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="184dp"
                android:src="@mipmap/add_to_garden"
                app:fabSize="normal" />
        </RelativeLayout>

    </FrameLayout>
</ScrollView>